@@ -6,7 +6,7 @@ importFrom(graphics, hist, lines, image, rect, filled.contour, contour, persp, p
 importFrom(grDevices, as.raster, terrain.colors, heat.colors, col2rgb, rainbow, dev.flush, dev.off, dev.new, xy.coords, png)
 import(sp)
 exportClasses(Extent, BasicRaster, Raster, RasterLayer, RasterBrick, RasterStack, RasterStackBrick)
-exportMethods("[", "[[", "==", "!=", "!", Arith, approxNA, as.array, as.character, as.vector, as.matrix, area, bandnr, barplot, brick, calc, clump, Compare, crop, crs, "crs<-", disaggregate, distance, erase, extent, extract, extend, flip, focal, geom, head, intersect, image, is.factor, lines, Logic, mask, Math, Math2, mean, merge, mosaic, ncell, ncol, "ncol<-", nlayers, nrow, "nrow<-", overlay, plot, plotRGB, raster, rasterize, reclassify, res, resample, rotate, sampleRandom, sampleRegular, stackSelect, shift, subs, Summary, t, tail, trim, unique, unstack, union, xmin, xmax, xres, ymin, ymax, yres, zonal, yFromRow, xFromCol,colFromX, rowFromY, cellFromXY, cellFromRowCol, xyFromCell, yFromCell, xFromCell, rowColFromCell,rowFromCell, colFromCell, readStart, readStop, "$", "$<-", subset, values, "values<-", writeStart, writeStop, writeValues, writeRaster)
+exportMethods("[", "[[", "==", "!=", "!", Arith, approxNA, as.array, as.character, as.vector, as.matrix, area, bandnr, barplot, brick, calc, clump, Compare, crop, crs, "crs<-", disaggregate, distance, erase, extent, extract, extend, flip, focal, geom, head, intersect, image, is.factor, lines, Logic, mask, Math, Math2, mean, merge, mosaic, ncell, ncol, "ncol<-", nlayers, nrow, "nrow<-", overlay, plot, plotRGB, raster, rasterize, reclassify, res, resample, rotate, "$", "$<-", sampleRandom, sampleRegular, stackSelect, shift, subset, subs, Summary, t, tail, trim, unique, unstack, union, xmin, xmax, xres, ymin, ymax, yres, zonal, yFromRow, xFromCol,colFromX, rowFromY, cellFromXY, cellFromRowCol, xyFromCell, yFromCell, xFromCell, rowColFromCell,rowFromCell, colFromCell, readStart, readStop, values, "values<-", writeStart, writeStop, writeValues, writeRaster)
 useDynLib(raster, .registration = TRUE)
 exportPattern("^[^\\.\\_]")
 
