@@ -1,7 +1,8 @@
 
 --- current version
-faster rasterization of polygons
-
+faster rasterization of polygons (introduced in previous versions, but, by mistake, was not used in most cases)
+faster handling of GMT ncdf files by Mike Sumner
+new argument "na.last" to "unique" suggsted by Marco Sciaini. https://github.com/rspatial/raster/issues/23 
 
 --- 2-Nov-2018, version: 2.8-4
 Improved estimation of available RAM with contributions by Lorenzo Busetto. RAM available is now computed on windows, linux and mac. No more that 60% of available RAM is used (if the estimated RAM needed is not too low). Not more than raster:::.maxmemory() is used; but it should now be safe to set this to Inf. If canProcessInMemory() returns FALSE, chunksize is set 25% of available RAM, or raster:::.chunksize(), whichever is lower. (set options via rasterOptions())
@@ -10,6 +11,8 @@ testthat unit tests introduced by Mike Sumner and Jakub Nowosad
 as.character() for Raster objects to create the R code to re-create the Raster skeleton in examples.
 
 Reading point values via GDAL has become slower in 2.7-15, reverted to previous function. Thanks to Andrew Brown and Dylan Beaudette for identifying the problem.
+
+Bare negate with a Raster* (e.g. -r) now works. https://github.com/rspatial/raster/issues/21
 
 Bug fixes:
 fixed the link for GADM countries download. Bug reported by Loic Dutrieux
